# beagle

./: .dockerignore  Dockerfile.dev  Makefile  README-lambda.md  README.md  docker-compose.yml  find_big_files.sh  install-lambda.sh  pyproject-lambda.toml  pyproject.toml  requirements-dev.txt  requirements-stable.txt  requirements.txt
.cursor/rules/: momo.mdc
.github/workflows/: docker-test.yml
beagle/: __init__.py  profiling.py
beagle/augmentations/: README.md  __init__.py  compose.py  transforms.py  types.py
beagle/checkpoint/: __init__.py  load.py  save.py
beagle/conversions/: __init__.py  dispatch.py  extract.py  hierarchical.py  tfjs.py  traverse.py  types.py  verify.py
beagle/data/: __init__.py  protocol.py
beagle/dataset/: __init__.py  crops.py  disk_loader.py  iterator.py  iterator_utils.py  loader.py  parsers.py  preprocessing.py  seed.py  splitting.py  stats.py  tf_config.py  tfrecord_jax.py  types.py  utility.py  writer.py
beagle/experiments/: __init__.py  config.py  registry.py  run.py  sweeps.py  tracker.py
beagle/graph/: __init__.py  graph.py  node.py  state.py  training.py
beagle/network/: __init__.py  attention.py  categorical_vae.py  compact_vae.py  dense_encoder.py  hrnet.py  patch.py  position.py  receptive_field.py  receptive_field_compute.py  receptive_field_helpers.py  receptive_field_types.py  receptive_field_utils.py  types.py  unet.py  vit.py  wavelet_vae.py  wavelets.py
beagle/training/: README.md  __init__.py  checkpoint.py  loop.py  metrics.py  mixed_precision.py  types.py
beagle/visualization/: __init__.py  backend.py  callbacks.py  dataset.py  plotting.py
beagle/wavelets/: __init__.py  conv.py  filters.py
docs/: receptive_field_guide.md
examples/: README_POLYMER.md  __init__.py  flexible_loader.py  polymer_data.py  polymer_loader.py  polymer_writer.py  profile_loader.py  profile_synthetic.py  root_writer.py  tfrecord_to_jax_example.py  training_example.py
examples/conversion/: convert_wavelet_vae_jax_to_tf.py
examples/data/: convert_polymer_dataset.py  datx.py  filter_utils.py  flexible_loader.py  polymer_loader.py  reproducible_training.py
examples/demos/: dataset_visualization.py  receptive_field.py  training_with_viz.py
examples/nema_dish/: batch_inference.py  data_loader.py  export_model_web.py  inference.py  read_model_js.py  train.py  write_tfrecord.py
examples/nema_vae/: data_loader.py  export_model_web.py  train.py  write_tfrecord.py
examples/optical_profilometry/: README.md  configs.py  data_loader.py  datx_to_np.py  export_model_web.py  inference.py  np_to_tfrecord.py  train.py  train_managed.py  train_simple_experiment.py  training_steps.py  wavelet_viz.py
examples/profiling/: demo_profiling.py  profile_loader.py
examples/raster_maps/: Dockerfile  convert.sh  crop_geo.py
examples/segmentation/: batch_inference.py  configs.py  data_loader.py  data_loader_disk.py  export_model_web.py  fast_augmentations.py  train.py  train_disk.py  train_graph.py  training_steps.py  (+2 more)
tests/: __init__.py  test_augmentations.py  test_compose.py  test_conversions_hierarchical.py  test_loader.py  test_profiling.py  test_receptive_field.py  test_splitting.py  test_tfrecord_jax.py  test_training.py  test_types.py  test_utility_int64.py  test_wavelets.py  test_writer.py
training/: inference.py
visualization/: __init__.py  callbacks.py  plotting.py
(+43 files in other folders)
