[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beagle"
version = "0.1.0"
description = "Dataset utilities for TFRecord creation and loading"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Beagle Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
    "tensorflow>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
]
examples = [
    "opencv-python>=4.5.0",
    "tqdm>=4.60.0",
    "ultralytics>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/beagle"
Repository = "https://github.com/yourusername/beagle"

[tool.setuptools.packages.find]
where = ["."]
include = ["beagle*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=beagle --cov-report=term-missing"

