[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beagle"
version = "0.1.0"
description = "Dataset utilities for TFRecord creation and loading"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Beagle Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=2.0.0",
    "tensorflow-cpu>=2.20.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.8.0",
    "pillow>=12.0.0",
    "PyWavelets>=1.4.0",
    "rich>=14.0.0",
    "protobuf>=6.0.0",
    "typing_extensions>=4.0.0",
]

# Note: JAX GPU installation requires manual steps (see README)
# pip install --upgrade "jax[cuda12]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "coverage>=7.0.0",
]
augmentations = [
    "albumentations>=1.3.0",
]
examples = [
    "opencv-python>=4.5.0",
    "tqdm>=4.60.0",
    "ultralytics>=8.0.0",
]
mcp = [
    "mcp>=0.9.0",
]
conversions = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
visualization = [
    "matplotlib>=3.8.0",
]
all = [
    "albumentations>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "matplotlib>=3.8.0",
    "opencv-python>=4.5.0",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/beagle"
Repository = "https://github.com/yourusername/beagle"

[tool.setuptools.packages.find]
where = ["."]
include = ["beagle*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=beagle --cov-report=term-missing"

